Api Infrastructure Layer Development. EntityFramework + Context.

--- a/api/BillPlannerApi/BillPlannerApi.Infrastructure.Repository/BillPlannerApi.Infrastructure.Repository.csproj
+++ b/api/BillPlannerApi/BillPlannerApi.Infrastructure.Repository/BillPlannerApi.Infrastructure.Repository.csproj
@@ -5,12 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BillPlannerApi.Application.DTO\BillPlannerApi.Application.DTO.csproj" />
     <ProjectReference Include="..\BillPlannerApi.Domain.Core\BillPlannerApi.Domain.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\BillPlannerApi.Infrastructure.Data\BillPlannerApi.Infrastructure.Data.csproj" />
   </ItemGroup>
 
 </Project>
